--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "ajv-keywords": "^3.2.0",
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "jquery": "^3.3.1",
+    "jspdf": "^1.4.1",
+    "npm": "^6.4.1",
     "plotly.js": "^1.41.3",
+    "to": "^0.2.9",
+    "update": "^0.7.4",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
     "vue-router": "^3.0.1",
