--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ajv-keywords": "^3.2.0",
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "jquery": "^3.3.1",
     "jspdf": "^1.4.1",
     "npm": "^6.4.1",
