--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-axios": "^2.1.3",
     "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.14.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
